<resources>
    <string name="app_name">کویر الکترونیک</string>
    <string name="save">ذخیره</string>
    <string name="login">ورود</string>
    <string name="username">نام کاربری</string>
    <string name="register">ثبت نام</string>
    <string name="name">نام و نام خانوادگی </string>
    <string name="email">ایمیل</string>
    <string name="select_sub_category">انتخاب زیرشاخه</string>
    <string name="posts">پست ها</string>
    <string name="add_comment">  نظر جدید</string>
    <string name="comments">نظرات</string>
    <string name="comment">نظر</string>
    <string name="send">ارسال</string>
    <string name="full_all_fields">همه فیلدها را پر کنید</string>
    <string name="success_send_comment">نظر با موفقیت ارسال شد</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="error_in_connection">اشکال در ارتباط</string>
    <string name="user_or_pass_is_wrong">نام کاربری یا پسورد اشتباه است</string>
    <string name="password">رمز عبور</string>
    <string name="mobile">موبایل</string>
    <string name="welcome">خوش آمدید:</string>
    <string name="open_in_browser">مشاهده در مرورگر</string>
    <string name="no_post">نظری جهت نمایش وجود ندارد</string>
    <string name="add_to_list">به لیست اضافه شد</string>
    <string name="home">صفحه اصلی</string>
    <string name="redy_read">آماده مطالعه</string>
    <string name="delete_success">با موفقیت حذف شد</string>
    <string name="keyword">متن مورد نظر جهت جستجو ...</string>
    <string name="search">جستجو</string>
    <string name="no_exit_post">پستی جهت نمایش وجود ندارد</string>
    <string name="guest">مهمان</string>
    <string name="about_we">درباره ما</string>
    <string name="logout">خروج</string>
    <string name="not_exit_subcat">زیرشاخه ای وجود ندارد!!!</string>
    <string name="refresh_page">بارگذاری مجدد </string>
    <string name="not_respone">پاسخی از سرور دریافت نشد</string>
    <string name="share_link">اشتراک لینک</string>
    <string name="share_via">اشتراک از طریق</string>
    <string name="page">صفحه:</string>
    <string name="totoal_post">کل پست ها:</string>
    <string name="active">فعال سازی</string>
    <string name="register_success">ثبت نام با موفقیت انجام شد</string>
    <string name="register_fail">اشکال در ثبت نام</string>
    <string name="active_code">کد فعال سازی:</string>
    <string name="scan_code">اسکن QR</string>
    <string name="copied"> کد کپی شد </string>
    <string name="email_not_valid">ایمیل معتبر نیست</string>
    <string name="exit_login">برگشت</string>
    <string name="login_please">لطفا وارد شوید</string>
    <string name="qr_is_wrong">اشکال در کد QR</string>
    <string name="access_list">دسترسی ها</string>
    <string name="please_wait">در حال بارگذاری …</string>
    <string name="not_access_active">دسترسی فعالی برای شما وجود ندارد</string>
    <string name="loading_data">در حال بارگیری اطلاعات ...</string>
    <string name="sub_count">زیرشاخه ها:</string>
    <string name="empty_cat">این شاخه خالی است</string>
    <string name="result">نتیجه:</string>
    <string name="message">پیام:</string>
    <string name="success">موفق</string>
    <string name="error">خطا</string>
    <string name="new_version">نسخه جدید رسید</string>
    <string name="version">نسخه</string>
    <string name="available">در دسترس است</string>
    <string name="help">راهنما</string>
    <string name="error_in_internet">اشکال در دسترسی به اینترنت</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="pagger_array">
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>100</item>
        <item>200</item>
        <item>500</item>
    </string-array>
</resources>
