<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home_page"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/ready_read_page"
            android:icon="@drawable/ic_class_black_24dp"
            android:title="@string/redy_read" />

    </group>

    <group
        android:id="@+id/bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/login"
            android:icon="@drawable/ic_vpn_key_black_24dp"
            android:title="@string/login" />
        <item
            android:id="@+id/about_we"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/about_we"/>

    </group>

</menu>