<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/grdnt"
    android:clickable="true"
    android:layout_height="match_parent"
    tools:context=".fragments.ActiveFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/active_code_l"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:padding="5dp"
            android:layoutDirection="rtl"
            android:background="@color/g300"
            android:orientation="horizontal">
            <customviews.CustomTextView3
                android:layout_width="wrap_content"
                android:text="@string/active_code"
                android:textSize="21dp"
                android:textColor="@color/g500"
                android:layout_height="wrap_content"/>
            <customviews.CustomTextView3
                android:layout_width="wrap_content"
                android:id="@+id/active_code_tv"
                android:textSize="24dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:src="@drawable/ic_save_black_24dp"
                android:padding="15dp"
                android:id="@+id/save_clipbord"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <customview.CustomButtonRectangle
            android:layout_width="wrap_content"
            android:text="@string/scan_code"
            android:layout_below="@+id/active_code_l"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:id="@+id/scan_code_btn"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:id="@+id/result_line"
            android:layout_below="@id/scan_code_btn"
            android:layout_height="wrap_content">
            <customviews.CustomTextView
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:text="@string/result"
                android:layout_gravity="right"
                android:padding="2dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"/>
            <customviews.CustomTextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:padding="5dp"
                android:background="@drawable/border_edit_text"
                android:id="@+id/result_tv"
                android:textDirection="rtl"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_below="@id/result_line"
            android:layout_height="wrap_content">
            <customviews.CustomTextView
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:text="@string/message"
                android:layout_gravity="right"
                android:padding="2dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"/>
            <customviews.CustomTextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:padding="5dp"
                android:background="@drawable/border_edit_text"
                android:id="@+id/message_tv"
                android:textDirection="rtl"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </RelativeLayout>
    </ScrollView>
</FrameLayout>