<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:clickable="true"
    android:background="@drawable/grdnt">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30px"
        android:paddingLeft="60dp"
        android:paddingRight="60dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border_register"
                android:padding="16dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_person_black_24dp"
                    android:layout_gravity="center"/>
                <customviews.CustomEditText2
                    android:id="@+id/nameuser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:gravity="center"
                    android:background="#00c7c7c7"
                    android:textColorHint="#d9e5f3"
                    android:layout_marginLeft="15dp"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:inputType="text"
                    android:textColor="#fff"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border_register"
                android:padding="16dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_email_black_24dp"
                    android:layout_gravity="center"/>
                <customviews.CustomEditText2
                    android:id="@+id/emailuser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:gravity="center"
                    android:background="#00c7c7c7"
                    android:textColorHint="#d9e5f3"
                    android:layout_marginLeft="15dp"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:inputType="textEmailAddress"
                    android:textColor="#fff"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border_register"
                android:padding="16dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_smartphone_black_24dp"
                    android:layout_gravity="center"/>
                <customviews.CustomEditText2
                    android:id="@+id/mobileuser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile"
                    android:gravity="center"
                    android:background="#00c7c7c7"
                    android:textColorHint="#d9e5f3"
                    android:layout_marginLeft="15dp"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:maxLength="11"
                    android:inputType="number"
                    android:textColor="#fff"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border_register"
                android:padding="16dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_vpn_key_black_24dp"
                    android:layout_gravity="center"/>
                <customviews.CustomEditText2
                    android:id="@+id/pswrdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#d9e5f3"
                    android:layout_marginLeft="15dp"
                    android:background="#00c7c7c7"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:gravity="center"
                    android:hint="********"
                    android:maxLength="12"
                    android:inputType="text"
                    android:textColor="#fff"
                    />
            </LinearLayout>
            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_height="wrap_content">

                <customviews.CustomTextView
                    android:id="@+id/registerBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#009a9a"
                    android:letterSpacing="0.2"
                    android:padding="16dp"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="#d9e5f3"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progress_register"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignBottom="@+id/registerBtn"
                    android:layout_alignTop="@+id/registerBtn"
                    android:indeterminate="true"
                    android:elevation="2dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:indeterminateTint="@android:color/holo_blue_dark"
                    android:visibility="gone" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
