<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl"
    android:background="@drawable/grdnt">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="100dp"
                android:id="@+id/qrcode"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_height="100dp"
                android:src="@drawable/kavir_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border_register"
                android:padding="16dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_smartphone_black_24dp"
                    android:layout_gravity="center"/>
                <customviews.CustomEditText2
                    android:id="@+id/usernameEd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#d9e5f3"
                    android:layout_marginLeft="15dp"
                    android:background="#00c7c7c7"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:gravity="center"
                    android:hint="091XXXXXXXX"
                    android:maxLength="11"
                    android:textDirection="ltr"
                    android:inputType="text"
                    android:textColor="@color/black"
                    />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_register"
                android:padding="16dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_vpn_key_black_24dp"
                    android:layout_gravity="center"/>
                <customviews.CustomEditText2
                    android:id="@+id/passwordEd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#d9e5f3"
                    android:background="#00c7c7c7"
                    android:textSize="16dp"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:hint="******"
                    android:maxLength="15"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"/>
                <ImageButton
                    android:layout_width="24dp"
                    android:id="@+id/toggle_pass"
                    android:layout_alignParentLeft="true"
                    android:padding="10dp"
                    android:layout_height="24dp"
                    android:src="@drawable/show_eye"/>

            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/save_line"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">
                <net.igenius.customcheckbox.CustomCheckBox
                    android:layout_width="30dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/save"
                    android:id="@+id/save_pass_ckb"
                    android:textColor="#003cff"
                    android:layout_height="30dp" />
                <customviews.CustomTextView3
                    android:layout_width="wrap_content"
                    android:text="@string/save"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:paddingRight="10dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textDirection="rtl">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content">
            <customviews.CustomTextView
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#009a9a"
                android:letterSpacing="0.2"
                android:padding="16dp"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#d9e5f3"
                android:textStyle="bold" />
            <customviews.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit_login"
                android:textColor="@color/white"
                android:layout_below="@id/loginBtn"
                android:padding="15dp"
                android:gravity="center"
                android:textStyle="bold"
                android:id="@+id/exist_login"
                android:background="@color/red800"
                android:layout_marginTop="10dp"/>

            <ProgressBar
                android:id="@+id/progress_login"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/loginBtn"
                android:layout_alignTop="@+id/loginBtn"
                android:indeterminate="true"
                android:elevation="2dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:indeterminateTint="@android:color/holo_blue_dark"
                android:visibility="gone" />

        </RelativeLayout>




    </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
